--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "lerna-init": "upbin lerna init"
+    "lerna-init": "lerna init"
   },
   "workspaces": [
     "packages/*"
@@ -13,7 +13,6 @@
   "author": "hisamatsu yoshiyuki <hisasann25@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "lerna": "^3.20.2",
-    "upbin": "^0.9.2"
+    "lerna": "^3.20.2"
   }
 }
