--- a/packages/hello/package.json
+++ b/packages/hello/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "cross-env NODE_ENV=prod rimraf dist/* && tsc && cpx ./appsscript.json dist",
+    "build": "cross-env NODE_ENV=prod tsc --noEmit",
     "watch": "cross-env NODE_ENV=dev tsc -w",
     "test": "cross-env NODE_ENV=prod jest",
     "test:coverage": "cross-env NODE_ENV=prod jest --no-cache --forceExit --coverage",
-    "gas:push": "clasp push -f",
+    "gas:push": "npm run build && clasp push -f",
     "gas:open": "clasp open"
   },
   "description": "> TODO: description",
@@ -15,13 +15,6 @@
   "homepage": "https://github.com/hisasann/gas-typescript-starter#readme",
   "license": "MIT",
   "main": "lib/hello.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hisasann/gas-typescript-starter.git"
@@ -30,6 +23,7 @@
     "url": "https://github.com/hisasann/gas-typescript-starter/issues"
   },
   "devDependencies": {
+    "@google/clasp": "^2.3.0",
     "@types/jest": "^25.2.1",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.2",
