--- a/packages/hello/tsconfig.json
+++ b/packages/hello/tsconfig.json
@@ -4,11 +4,12 @@
     //    "outDir": "./dist",
     "rootDir": "./src",
     "paths": {
-      "*": ["types/*"]
+      "*": ["types/*", "types/window"]
     },
     "baseUrl": "./",
     "types": [
       "@types/jest",
+      "types/window",
       // [@types/google-apps-script] Variable 'console' must be of type 'Console', but here has type 'console'. TS2403 - https://gitmemory.com/issue/DefinitelyTyped/DefinitelyTyped/32585/489331668
       // [@types/google-apps-script] Variable 'console' must be of type 'Console', but here has type 'console'. TS2403 · Issue #32585 · DefinitelyTyped/DefinitelyTyped - https://github.com/DefinitelyTyped/DefinitelyTyped/issues/32585
       // @types/node の console と、 @types/google-apps-script の console が型でバッティングしているので、
