--- a/packages/hello/package.json
+++ b/packages/hello/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env NODE_ENV=prod jest",
     "test:coverage": "cross-env NODE_ENV=prod jest --no-cache --forceExit --coverage",
     "lint": "prettier . --write --ignore-path ../../.gitignore",
-    "push": "npm run build && npm run test && clasp push -f && npm run open",
+    "push": "npm run lint && npm run build && npm run test && clasp push -f && npm run open",
     "open": "clasp open"
   },
   "description": "> TODO: description",
