--- a/packages/hello/src/appsscript.json
+++ b/packages/hello/src/appsscript.json
@@ -1,6 +1,14 @@
 {
   "timeZone": "Asia/Tokyo",
-  "dependencies": {},
+  "dependencies": {
+    "libraries": [
+      {
+        "userSymbol": "Moment",
+        "libraryId": "MHMchiX6c1bwSqGM1PZiW_PxhMjh3Sh48",
+        "version": "9"
+      }
+    ]
+  },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
   "oauthScopes": [
