--- a/packages/read-google-spreadsheet/src/appsscript.json
+++ b/packages/read-google-spreadsheet/src/appsscript.json
@@ -2,5 +2,6 @@
   "timeZone": "America/New_York",
   "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "oauthScopes": ["https://www.googleapis.com/auth/spreadsheets"]
 }
