--- a/packages/hello/package.json
+++ b/packages/hello/package.json
@@ -25,9 +25,14 @@
     "url": "https://github.com/hisasann/gas-typescript-starter/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-typescript": "^7.9.4",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
     "@google/clasp": "^2.3.0",
     "@types/google-apps-script": "^1.0.11",
     "@types/jest": "^25.2.1",
+    "babel-jest": "^25.4.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.2",
     "jest": "^25.2.7",
